src/objects/Case_Esc_Rem__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Remider_1st__c</fullName>
        <label>Remider 1st (In Hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remider_2nd__c</fullName>
        <label>Remider 2nd (In Hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remider_3rd__c</fullName>
        <label>Remider 3rd &amp; Escalation (In Hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Case Escalations &amp; Reminder</label>
</CustomObject>